Photo plus sombre

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     Vice-présidente : Charlène Meuret
                     <br>
                     Trésorier : Arthur Amelot
-                    Vice-trésorière : Imane El-Adhri
+                    Vice-trésorière : Imane El-Hadri
                     <br>
                     Secrétaire : Justine Chauveaux
                     Vice-secrétaire : Laëtitia Drieu 
