Correction des erreurs W3C

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=devicewidth, initial-scale=1.0, user-scalable=no" /> <!--Adapte la taille d'affichage pour les smartphones-->
+        <meta name="viewport" content="width=devicewidth, initial-scale=1.0" /> <!--Adapte la taille d'affichage pour les smartphones-->
         <meta name="description" content="Le Master Juriste d’affaires Commerce-Distribution-Consommation (JA CDC) est une formation d’excellence dont la deuxième année se déroule en alternance afin d’assurer une intégration optimale de ses étudiants sur le marché du travail. Cette formation est appréciée par les entreprises avec lesquelles années après années, un solide réseau professionnel a été constitué." />
         <link rel="stylesheet" href="style/normalize.css" /> <!--On utilise la fiche de style "normalize.css"-->
         <link rel="stylesheet" href="style/style.css" /> <!--On utilise la fiche de style "style.css"-->
@@ -38,7 +38,7 @@
             <!-- -----------------------------------------------------MOT DU DIRECTEUR----------------------------------------------------- -->
             <h1 class="banniere" id="index">LE MOT DU DIRECTEUR</h1>
             <div class="container_index">
-                    <img id="directeur_pp" src="images/directeur.jpg">
+                    <img id="directeur_pp" src="images/directeur.jpg" alt="Photo du directeur">
                     <div>
                         <p>
                             "Le Master Juriste d’affaires Commerce-Distribution-Consommation (JA CDC) est une formation d’excellence dont la deuxième année se déroule en alternance afin d’assurer une intégration optimale de ses étudiants sur le marché du travail. Cette formation est appréciée par les entreprises avec lesquelles années après années, un solide réseau professionnel a été constitué. <br><br>
@@ -195,12 +195,12 @@
             
             <div class="promotions">
 
-                <div class="photo_promotion"><strong>Promotion 2021/2022</strong><img src="images/Promotion 2021-2022.jfif" alt=""></div>
-                <div class="photo_promotion"><strong>Promotion 2020/2021</strong><img src="images/Promotion 2020-2021.webp" alt=""></div>
-                <div class="photo_promotion"><strong>Promotion 2019/2020</strong><img src="images/Promotion 2019-2020.webp" alt=""></div>
-                <div class="photo_promotion"><strong>Promotion 2018/2019</strong><img src="images/Promotion 2018-2019.webp" alt=""></div>
-                <div class="photo_promotion"><strong>Promotion 2017/2018</strong><img src="images/Promotion 2017-2018.webp" alt=""></div>
-                <div class="photo_promotion"><strong>Promotion 2016/2017</strong><img src="images/Promotion 2016-2017.webp" alt=""></div>
+                <div class="photo_promotion"><strong>Promotion 2021/2022</strong><img src="images/Promotion_2021-2022.jfif" alt=""></div>
+                <div class="photo_promotion"><strong>Promotion 2020/2021</strong><img src="images/Promotion_2020-2021.webp" alt=""></div>
+                <div class="photo_promotion"><strong>Promotion 2019/2020</strong><img src="images/Promotion_2019-2020.webp" alt=""></div>
+                <div class="photo_promotion"><strong>Promotion 2018/2019</strong><img src="images/Promotion_2018-2019.webp" alt=""></div>
+                <div class="photo_promotion"><strong>Promotion 2017/2018</strong><img src="images/Promotion_2017-2018.webp" alt=""></div>
+                <div class="photo_promotion"><strong>Promotion 2016/2017</strong><img src="images/Promotion_2016-2017.webp" alt=""></div>
 
                 <div>
                     <br><br>
@@ -270,7 +270,7 @@
             <footer id="footer">
                 <div>
                     <div>
-                        <h3>ADRESSE</h2>
+                        <h3>ADRESSE</h3>
                         <ul>
                             <li>
                                 <i class="fas fa-map-marked-alt"></i>
@@ -280,7 +280,7 @@
                     </div>
                     <div class="split"></div>
                     <div>
-                        <h3>CONTACT</h2>
+                        <h3>CONTACT</h3>
                         <ul>
                             <li>
                                 <i class="fas fa-envelope"></i>
